2005-09-02  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/gobjectmodule.c: (pyg_signal_list_names):
	Also include interfaces, fixes #315038

2005-09-02  Johan Dahlin  <jdahlin@async.com.br>

	* configure.in: post release version bump

	* Changelog.pre-2-8: Move old changelog
